src/objects/BT_CO_ARMS_CreateAccountBatchFile__c.object
<CustomObject>
    <description>Staging object for Create Account Batch (ARMS063DX interface)</description>
    <fields>
        <fullName>ARMS_ID__c</fullName>
        <label>ARMS ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Debt_Exposure_Amount__c</fullName>
        <label>Approved Debt Exposure Amount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Sector__c</fullName>
        <label>Business Sector</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRID__c</fullName>
        <label>CCRID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_ID__c</fullName>
        <label>Creator ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_External__c</fullName>
        <label>Credit Limit External</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Internal__c</fullName>
        <label>Credit Limit Internal</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Term_Refererence__c</fullName>
        <label>Credit Term Refererence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Term__c</fullName>
        <label>Credit Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Giro_Acct_Number__c</fullName>
        <label>Cust Giro Acct Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Giro_Bank_Number__c</fullName>
        <label>Cust Giro Bank Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Management_Treatment__c</fullName>
        <label>Debt Management Treatment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Reason__c</fullName>
        <label>Failed Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retrieve_Account_Indicator__c</fullName>
        <label>Retrieve Account Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Group__c</fullName>
        <label>SOA Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Suppression_Indicator__c</fullName>
        <label>SOA Suppression Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;new&quot;</defaultValue>
        <label>Status</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transient_Indicator__c</fullName>
        <label>Transient Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_CreateAccountBatchFile</label>
    <nameField>
        <label>CreateAccountBatchFile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_CrateAccountBatchFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>